fix(small devices): fix size on smaller devices

--- a/src/app.css
+++ b/src/app.css
@@ -20,4 +20,6 @@ body {
 	font-family: 'Cascadia Code';
 	margin: 0;
 	box-sizing: border-box;
+	min-height: 100vh;
+	height: 100vh;
 }
